@startuml Repository_Layer_V2
!include 00_Styling.puml
!include 01_Entity_Layer.puml
skinparam shadowing false
skinparam classAttributeIconSize 0

package "Repository Layer" {

    ' ==================== CORE & AUTH ====================
    interface BranchRepository {
        + findByName(name: String): Optional<Branch>
        + existsByName(name: String): boolean
    }

    interface UserRepository {
        + findByUsername(name: String): Optional<User>
        + findByEmail(email: String): Optional<User>
        + findByBranchId(branchId: Long): List<User>
        + findByBranchIdAndRole(id: Long, role: UserRole): List<User>
        + existsByUsername(name: String): boolean
        + existsByEmail(email: String): boolean
        + findByUsernameAndBranchId(u: String, b: Long): Optional<User>
    }

    ' ==================== RESOURCE MANAGEMENT ====================
    interface DepotRepository {
        + findByBranchId(branchId: Long): List<Depot>
        + findByBranchIdAndName(id: Long, n: String): Optional<Depot>
        + existsByBranchId(branchId: Long): boolean
        --
        {method} // Native Spatial Query
        + findDepotsWithinRadius(bId, lng, lat, radius): List<Depot>
    }

    interface VehicleTypeRepository {
        + findAllByBranchId(branchId: Long): List<VehicleType>
    }

    interface FleetRepository {
        + findByIdAndBranchId(fId: Long, bId: Long): Optional<Fleet>
        + existsByBranchId(branchId: Long): boolean
        + findAllByBranchId(branchId: Long): List<Fleet>
    }

    interface VehicleRepository {
        + findByFleetBranchId(bId: Long, p: Pageable): Page<Vehicle>
        + findByStatus(status: VehicleStatus): List<Vehicle>
        + findByVehicleLicensePlate(plate: String): Optional<Vehicle>
        + existsByVehicleLicensePlate(plate: String): boolean
        --
        {method} // EntityGraph: startDepot, endDepot...
        + findAllByIdWithDepots(ids: List<Long>): List<Vehicle>
    }

    ' ==================== OPERATION ====================
    interface OrderRepository {
        + findByIdAndBranchId(oId: Long, bId: Long): Optional<Order>
        + findByStatus(ids: List<Long>, s: OrderStatus): List<Order>
        + findByBranchIdAndOrderCode(bId: Long, c: String): Optional<Order>
        + existsByBranchIdAndOrderCode(bId: Long, c: String): boolean
        + findByBranchIdOrderByCreatedAtDesc(bId: Long, p: Pageable): Page<Order>
    }

    ' ==================== OPTIMIZATION ====================
    interface OptimizationJobRepository {
        + findFirstByBranchIdAndStatusOrderByCreatedAtDesc(bId: Long, s: JobStatus): Optional<Job>
        + existsByBranchIdAndStatus(bId: Long, s: JobStatus): boolean
        + findByBranchIdAndStatus(bId: Long, s: JobStatus): List<Job>
        + countByBranchIdAndStatus(bId: Long, s: JobStatus): Long
        --
        {method} // Custom Query
        + findJobHistory(bId: Long, p: Pageable): List<Job>
    }

    interface SolutionRepository {
        + hasCompletedSolutions(branchId: Long): boolean
        + findByJobId(jobId: Long): Optional<Solution>
        + deleteByJobId(jobId: Long): Boolean
        --
        {method} // EntityGraph: routes, vehicles...
        + findWithDetailsById(id: Long): Optional<Solution>
    }

    interface RouteRepository {
        + findBySolutionIdOrderByRouteOrderAsc(sId: Long): List<Route>
        + findByVehicleId(vId: Long): List<Route>
        + findBySolutionIdAndVehicleId(sId: Long, vId: Long): List<Route>
        + countBySolutionId(sId: Long): Long
        --
        + calculateTotalDistance(sId: Long): Double
        + findUnderUtilizedRoutes(sId: Long, threshold: Double): List<Route>
    }

    interface RouteStopRepository {
        + findByRouteIdOrderBySequenceNumberAsc(rId: Long): List<RouteStop>
    }
}

' Relationships
BranchRepository ..> Branch : manages
UserRepository ..> User : manages
DepotRepository ..> Depot : manages
VehicleTypeRepository ..> VehicleType : manages
VehicleRepository ..> Vehicle : manages
OrderRepository ..> Order : manages
OptimizationJobRepository ..> OptimizationJob : manages
SolutionRepository ..> Solution : manages
RouteRepository ..> Route : manages
RouteStopRepository ..> RouteStop : manages

@enduml